// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`builder e2e emits a stable rich bundle shape for a multi-feature project 1`] = `
"-- Generated by @cc-ts/builder@<version>
-- HeaderSchema: @cc-ts/builder - v0.0.1
-- Entry: main
-- Hash: <hash>
-- BuildTime: <build-time>
-- Files: main.ts, utils/helper.ts
-- Minified: false
local ____defaultPath = package.path
package.path = ____defaultPath..";vendor/?.lua;vendor/?/init.lua"
            
local ____modules = {}
local ____moduleCache = {}
local ____originalRequire = require
local function require(file, ...)
    local moduleKey = file
    local externalTarget = select(1, ...)
    if ____moduleCache[moduleKey] then
        return ____moduleCache[moduleKey].value
    end
    if ____modules[moduleKey] then
        local module = ____modules[moduleKey]
        if select("#", ...) > 0 then
            ____moduleCache[moduleKey] = { value = module(...) }
        else
            ____moduleCache[moduleKey] = { value = module(moduleKey) }
        end
        return ____moduleCache[moduleKey].value
    else
        if ____originalRequire then
            if externalTarget ~= nil then
                return ____originalRequire(externalTarget)
            end
            return ____originalRequire(moduleKey)
        else
            if externalTarget ~= nil then
                error("module '" .. externalTarget .. "' not found")
            end
            error("module '" .. moduleKey .. "' not found")
        end
    end
end
____modules = {
["lualib_bundle"] = function(...) 
local function __TS__Class(self)
    local c = {prototype = {}}
    c.prototype.__index = c.prototype
    c.prototype.constructor = c
    return c
end

local __TS__Symbol, Symbol
do
    local symbolMetatable = {__tostring = function(self)
        return ("Symbol(" .. (self.description or "")) .. ")"
    end}
    function __TS__Symbol(description)
        return setmetatable({description = description}, symbolMetatable)
    end
    Symbol = {
        asyncDispose = __TS__Symbol("Symbol.asyncDispose"),
        dispose = __TS__Symbol("Symbol.dispose"),
        iterator = __TS__Symbol("Symbol.iterator"),
        hasInstance = __TS__Symbol("Symbol.hasInstance"),
        species = __TS__Symbol("Symbol.species"),
        toStringTag = __TS__Symbol("Symbol.toStringTag")
    }
end

local __TS__Iterator
do
    local function iteratorGeneratorStep(self)
        local co = self.____coroutine
        local status, value = coroutine.resume(co)
        if not status then
            error(value, 0)
        end
        if coroutine.status(co) == "dead" then
            return
        end
        return true, value
    end
    local function iteratorIteratorStep(self)
        local result = self:next()
        if result.done then
            return
        end
        return true, result.value
    end
    local function iteratorStringStep(self, index)
        index = index + 1
        if index > #self then
            return
        end
        return index, string.sub(self, index, index)
    end
    function __TS__Iterator(iterable)
        if type(iterable) == "string" then
            return iteratorStringStep, iterable, 0
        elseif iterable.____coroutine ~= nil then
            return iteratorGeneratorStep, iterable
        elseif iterable[Symbol.iterator] then
            local iterator = iterable[Symbol.iterator](iterable)
            return iteratorIteratorStep, iterator
        else
            return ipairs(iterable)
        end
    end
end

local Map
do
    Map = __TS__Class()
    Map.name = "Map"
    function Map.prototype.____constructor(self, entries)
        self[Symbol.toStringTag] = "Map"
        self.items = {}
        self.size = 0
        self.nextKey = {}
        self.previousKey = {}
        if entries == nil then
            return
        end
        local iterable = entries
        if iterable[Symbol.iterator] then
            local iterator = iterable[Symbol.iterator](iterable)
            while true do
                local result = iterator:next()
                if result.done then
                    break
                end
                local value = result.value
                self:set(value[1], value[2])
            end
        else
            local array = entries
            for ____, kvp in ipairs(array) do
                self:set(kvp[1], kvp[2])
            end
        end
    end
    function Map.prototype.clear(self)
        self.items = {}
        self.nextKey = {}
        self.previousKey = {}
        self.firstKey = nil
        self.lastKey = nil
        self.size = 0
    end
    function Map.prototype.delete(self, key)
        local contains = self:has(key)
        if contains then
            self.size = self.size - 1
            local next = self.nextKey[key]
            local previous = self.previousKey[key]
            if next ~= nil and previous ~= nil then
                self.nextKey[previous] = next
                self.previousKey[next] = previous
            elseif next ~= nil then
                self.firstKey = next
                self.previousKey[next] = nil
            elseif previous ~= nil then
                self.lastKey = previous
                self.nextKey[previous] = nil
            else
                self.firstKey = nil
                self.lastKey = nil
            end
            self.nextKey[key] = nil
            self.previousKey[key] = nil
        end
        self.items[key] = nil
        return contains
    end
    function Map.prototype.forEach(self, callback)
        for ____, key in __TS__Iterator(self:keys()) do
            callback(nil, self.items[key], key, self)
        end
    end
    function Map.prototype.get(self, key)
        return self.items[key]
    end
    function Map.prototype.has(self, key)
        return self.nextKey[key] ~= nil or self.lastKey == key
    end
    function Map.prototype.set(self, key, value)
        local isNewValue = not self:has(key)
        if isNewValue then
            self.size = self.size + 1
        end
        self.items[key] = value
        if self.firstKey == nil then
            self.firstKey = key
            self.lastKey = key
        elseif isNewValue then
            self.nextKey[self.lastKey] = key
            self.previousKey[key] = self.lastKey
            self.lastKey = key
        end
        return self
    end
    Map.prototype[Symbol.iterator] = function(self)
        return self:entries()
    end
    function Map.prototype.entries(self)
        local items = self.items
        local nextKey = self.nextKey
        local key = self.firstKey
        return {
            [Symbol.iterator] = function(self)
                return self
            end,
            next = function(self)
                local result = {done = not key, value = {key, items[key]}}
                key = nextKey[key]
                return result
            end
        }
    end
    function Map.prototype.keys(self)
        local nextKey = self.nextKey
        local key = self.firstKey
        return {
            [Symbol.iterator] = function(self)
                return self
            end,
            next = function(self)
                local result = {done = not key, value = key}
                key = nextKey[key]
                return result
            end
        }
    end
    function Map.prototype.values(self)
        local items = self.items
        local nextKey = self.nextKey
        local key = self.firstKey
        return {
            [Symbol.iterator] = function(self)
                return self
            end,
            next = function(self)
                local result = {done = not key, value = items[key]}
                key = nextKey[key]
                return result
            end
        }
    end
    Map[Symbol.species] = Map
end

local function __TS__New(target, ...)
    local instance = setmetatable({}, target.prototype)
    instance:____constructor(...)
    return instance
end

return {
  Map = Map,
  __TS__New = __TS__New
}
 end,
["main"] = function(...) 
local ____lualib = require("lualib_bundle")
local Map = ____lualib.Map
local __TS__New = ____lualib.__TS__New
local ____exports = {}
local ____helper = require("utils.helper")
local helper = ____helper.helper
local fs = require(nil, "fs")
local map = __TS__New(Map, {{"a", helper}})
____exports.default = {helper = helper, fs = fs, map = map}
return ____exports
 end,
["utils.helper"] = function(...) 
--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
local ____exports = {}
____exports.helper = "helper"
return ____exports
 end,
}

local ____export = require("main", ...)
package.path = ____defaultPath
return ____export
"
`;

exports[`builder e2e emits stable dist artifacts for a project using json modules 1`] = `
{
  "config.lua": 
"-- Generated by @cc-ts/builder@<version>
-- HeaderSchema: @cc-ts/builder - v0.0.1
-- Entry: config
-- Hash: <hash>
-- BuildTime: <build-time>
-- Files: config.json
-- Minified: false
local ____modules = {}
local ____moduleCache = {}
local ____originalRequire = require
local function require(file, ...)
    local moduleKey = file
    local externalTarget = select(1, ...)
    if ____moduleCache[moduleKey] then
        return ____moduleCache[moduleKey].value
    end
    if ____modules[moduleKey] then
        local module = ____modules[moduleKey]
        if select("#", ...) > 0 then
            ____moduleCache[moduleKey] = { value = module(...) }
        else
            ____moduleCache[moduleKey] = { value = module(moduleKey) }
        end
        return ____moduleCache[moduleKey].value
    else
        if ____originalRequire then
            if externalTarget ~= nil then
                return ____originalRequire(externalTarget)
            end
            return ____originalRequire(moduleKey)
        else
            if externalTarget ~= nil then
                error("module '" .. externalTarget .. "' not found")
            end
            error("module '" .. moduleKey .. "' not found")
        end
    end
end
____modules = {
["config"] = function(...) 
--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
return {name = "builder", enabled = true}
 end,
}
return require("config", ...)"
,
  "main.lua": 
"-- Generated by @cc-ts/builder@<version>
-- HeaderSchema: @cc-ts/builder - v0.0.1
-- Entry: main
-- Hash: <hash>
-- BuildTime: <build-time>
-- Files: config.json, main.ts
-- Minified: false
local ____modules = {}
local ____moduleCache = {}
local ____originalRequire = require
local function require(file, ...)
    local moduleKey = file
    local externalTarget = select(1, ...)
    if ____moduleCache[moduleKey] then
        return ____moduleCache[moduleKey].value
    end
    if ____modules[moduleKey] then
        local module = ____modules[moduleKey]
        if select("#", ...) > 0 then
            ____moduleCache[moduleKey] = { value = module(...) }
        else
            ____moduleCache[moduleKey] = { value = module(moduleKey) }
        end
        return ____moduleCache[moduleKey].value
    else
        if ____originalRequire then
            if externalTarget ~= nil then
                return ____originalRequire(externalTarget)
            end
            return ____originalRequire(moduleKey)
        else
            if externalTarget ~= nil then
                error("module '" .. externalTarget .. "' not found")
            end
            error("module '" .. moduleKey .. "' not found")
        end
    end
end
____modules = {
["main"] = function(...) 
--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
local ____exports = {}
local ____config_2Ejson = require("config")
local config = ____config_2Ejson.default
____exports.default = config.name .. tostring(config.enabled)
return ____exports
 end,
["config"] = function(...) 
--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
return {name = "builder", enabled = true}
 end,
}
return require("main", ...)"
,
}
`;

exports[`builder e2e cli build command produces expected bundled outputs from tsconfig 1`] = `
{
  "main.lua": 
"-- Generated by @cc-ts/builder@<version>
-- HeaderSchema: @cc-ts/builder - v0.0.1
-- Entry: main
-- Hash: <hash>
-- BuildTime: <build-time>
-- Files: main.ts, shared/value.ts
-- Minified: false
local ____modules = {}
local ____moduleCache = {}
local ____originalRequire = require
local function require(file, ...)
    local moduleKey = file
    local externalTarget = select(1, ...)
    if ____moduleCache[moduleKey] then
        return ____moduleCache[moduleKey].value
    end
    if ____modules[moduleKey] then
        local module = ____modules[moduleKey]
        if select("#", ...) > 0 then
            ____moduleCache[moduleKey] = { value = module(...) }
        else
            ____moduleCache[moduleKey] = { value = module(moduleKey) }
        end
        return ____moduleCache[moduleKey].value
    else
        if ____originalRequire then
            if externalTarget ~= nil then
                return ____originalRequire(externalTarget)
            end
            return ____originalRequire(moduleKey)
        else
            if externalTarget ~= nil then
                error("module '" .. externalTarget .. "' not found")
            end
            error("module '" .. moduleKey .. "' not found")
        end
    end
end
____modules = {
["main"] = function(...) 
--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
local ____exports = {}
local ____value = require("shared.value")
local value = ____value.value
____exports.default = value
return ____exports
 end,
["shared.value"] = function(...) 
--[[ Generated with https://github.com/TypeScriptToLua/TypeScriptToLua ]]
local ____exports = {}
____exports.value = "shared"
return ____exports
 end,
}
return require("main", ...)"
,
}
`;

exports[`builder e2e cli help output includes builder-specific options 1`] = `
"Version <builder> (TSTL <tstl>)
Syntax:   cc-ts [options] [files...]

Examples: cc-ts path/to/file.ts [...]
          cc-ts -p path/to/tsconfig.json

In addition to the options listed below you can also pass options
for the typescript compiler (For a list of options use tsc -h).
Some tsc options might have no effect.

Options:

 --minify <boolean>                              Minify the resulting Lua files.

 --builtInModules <array>                        A list of built-in modules to include in the bundle.

 --serve <boolean>                               Serve the bundle over HTTP.

 -sp|--servePort <number>                        The port to serve the bundle on.

 --debug <boolean>                               Enable debug mode.

 --extraPaths <array>                            A list of extra paths to include in the bundle.

 --ignoreAsEntryPoint <array>                    A list of files to ignore as entry points.

"
`;
